{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 142,
  "lineage": "c9d0175b-28f8-2a91-a5dd-ce410ceeed9e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgateway_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b1fe2b2ceca3557",
            "association_id": "eipassoc-0f58cfa640545ac09",
            "domain": "vpc",
            "id": "eipalloc-04b1fe2b2ceca3557",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0671fbe6acfb5ba17",
            "private_dns": "ip-10-0-1-145.ec2.internal",
            "private_ip": "10.0.1.145",
            "public_dns": "ec2-18-206-78-180.compute-1.amazonaws.com",
            "public_ip": "18.206.78.180",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745037482283:internet-gateway/igw-0db6c5656f77d5bdd",
            "id": "igw-0db6c5656f77d5bdd",
            "owner_id": "745037482283",
            "vpc_id": "vpc-06e7e673c4c804c46"
          },
          "dependencies": [
            "aws_vpc.myvpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynatgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04b1fe2b2ceca3557",
            "connectivity_type": "public",
            "id": "nat-0fc0f9a098cd4e0d3",
            "network_interface_id": "eni-0671fbe6acfb5ba17",
            "private_ip": "10.0.1.145",
            "public_ip": "18.206.78.180",
            "subnet_id": "subnet-070289bcc86d54564"
          },
          "dependencies": [
            "aws_eip.natgateway_ip",
            "aws_subnet.pubsubnet1",
            "aws_vpc.myvpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "priRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745037482283:route-table/rtb-00f38acc8998b413e",
            "id": "rtb-00f38acc8998b413e",
            "owner_id": "745037482283",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fc0f9a098cd4e0d3",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06e7e673c4c804c46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.natgateway_ip",
            "aws_nat_gateway.mynatgateway",
            "aws_subnet.pubsubnet1",
            "aws_vpc.myvpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745037482283:route-table/rtb-0738fab71a6d3aba2",
            "id": "rtb-0738fab71a6d3aba2",
            "owner_id": "745037482283",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0db6c5656f77d5bdd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06e7e673c4c804c46"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.myvpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "attach_private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04324b6d934da97d4",
            "route_table_id": "rtb-00f38acc8998b413e",
            "subnet_id": "subnet-02573f390d0bbe304"
          },
          "dependencies": [
            "aws_eip.natgateway_ip",
            "aws_nat_gateway.mynatgateway",
            "aws_route_table.priRT",
            "aws_subnet.prisubnet1",
            "aws_subnet.pubsubnet1",
            "aws_vpc.myvpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "attach_private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e253bde83f510099",
            "route_table_id": "rtb-00f38acc8998b413e",
            "subnet_id": "subnet-0704412e9d740b466"
          },
          "dependencies": [
            "aws_eip.natgateway_ip",
            "aws_nat_gateway.mynatgateway",
            "aws_route_table.priRT",
            "aws_subnet.prisubnet2",
            "aws_subnet.pubsubnet1",
            "aws_vpc.myvpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "attach_public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f45613a27483bee2",
            "route_table_id": "rtb-0738fab71a6d3aba2",
            "subnet_id": "subnet-070289bcc86d54564"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pubRT",
            "aws_subnet.pubsubnet1",
            "aws_vpc.myvpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "attach_public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07888a025a7c0af75",
            "route_table_id": "rtb-0738fab71a6d3aba2",
            "subnet_id": "subnet-0fc69a0886a471b95"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.pubRT",
            "aws_subnet.pubsubnet2",
            "aws_vpc.myvpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745037482283:subnet/subnet-02573f390d0bbe304",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02573f390d0bbe304",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745037482283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06e7e673c4c804c46"
          },
          "dependencies": [
            "aws_vpc.myvpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prisubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745037482283:subnet/subnet-0704412e9d740b466",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0704412e9d740b466",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745037482283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06e7e673c4c804c46"
          },
          "dependencies": [
            "aws_vpc.myvpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745037482283:subnet/subnet-070289bcc86d54564",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070289bcc86d54564",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "745037482283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06e7e673c4c804c46"
          },
          "dependencies": [
            "aws_vpc.myvpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745037482283:subnet/subnet-0fc69a0886a471b95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fc69a0886a471b95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "745037482283",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-06e7e673c4c804c46"
          },
          "dependencies": [
            "aws_vpc.myvpc-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745037482283:vpc/vpc-06e7e673c4c804c46",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f74a69a822466efe",
            "default_route_table_id": "rtb-03730ee52c14ee0d6",
            "default_security_group_id": "sg-020dccc9601e9ae6d",
            "dhcp_options_id": "dopt-0f8f8bc16ebe7e4b1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": false,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e7e673c4c804c46",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03730ee52c14ee0d6",
            "owner_id": "745037482283"
          }
        }
      ]
    }
  ]
}